# syncomat

./: .gitignore  BRIEFING_SYNCTOOL.md  DESIGN.md  PRODUCT.md  README.md  ROADMAP.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
deploy/truenas-syncthing/: README.md  docker-compose.yml  setup.sh
docs/: RELEASING.md  truenas-node-konzept.md
mockups/: BRIEF.md  a-tower.html  b-resilio.html  c-arc.html  index.html  native-redesign.html
pair-worker/: README.md  wrangler.toml
pair-worker/src/: index.js
scripts/: fetch-syncthing.sh
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: autostart.rs  conflicts.rs  firstrun.rs  folder_settings.rs  folder_stats.rs  ignored_folders.rs  invites.rs  lib.rs  main.rs  remotes.rs  reveal.rs  sidecar.rs  tags.rs
src-tauri/windows-installer/: install-hooks.nsh
src/components/: ActiveInvitesPanel.tsx  ActivityFeed.tsx  CodeRedeemModal.tsx  CodeShowModal.tsx  ConflictResolverModal.tsx  CreateFolderModal.tsx  DeviceDetailModal.tsx  DevicePill.tsx  DeviceRow.tsx  EmptyState.tsx  FolderCard.tsx  FolderErrorsModal.tsx  FolderInspector.tsx  FolderList.tsx  FolderSettingsModal.tsx  GlobalActivityView.tsx  Header.tsx  LinkFolderModal.tsx  Modal.tsx  PanelShell.tsx  ServerNodeModal.tsx  SettingsModal.tsx  Sidebar.tsx  StatusLight.tsx  Statusbar.tsx  SyncStatusBadge.tsx  TagChip.tsx  TagEditor.tsx  TransferRatePill.tsx  UpdateBanner.tsx
src/lib/: activity.ts  autoAccept.ts  autostart.ts  conflicts.ts  (+16 more)
