[package]
name = "syncomat"
version = "0.8.5"
description = "P2P-Sync ohne Login. Resilio-artig auf Syncthing."
authors = ["Marlon Candeloro"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "syncomat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2.3.5"
uuid = { version = "1.23.2", features = ["v4", "v7"] }
tauri-plugin-dialog = "2.7.1"
hmac = "0.13.0"
sha2 = "0.11.0"
base64 = "0.22.1"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
tauri-plugin-single-instance = "2.4.2"
tauri-plugin-autostart = "2.5.1"
walkdir = "2.5.0"
tauri-plugin-notification = "2.3.3"

